script is added

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
             <h5 class="title text-center m-heading text-secondary">CONTACT ME</h5>
             <div class="contact-content">
                 <div class="column left">
-                    <h2>Just Say Hello</h2>
-                    <form>
+                    <h2>Just Fill The Form</h2>
+                    <form action="/", method="post">
                         <div class="form-group">
                             <input type="text" name="name" id="name" placeholder="Your Name">
                         </div>
