--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Portfolio Website | Using HTML/CSS $ JavaScript</title>
+    <title>Engr Sana Ullah |Portfolio</title>
     <link rel="stylesheet" href="boxicons-2.0.9/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
                 
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a><span class="text-secondary"><i class="bx bxs-phone bx-xs"></i></span>+44187652390</a></li>
+                <li><a><span class="text-secondary"><i class="bx bxs-phone bx-xs"></i></span>+923109882572</a></li>
             </ul>
             <!-- <div class="menu-btn">
                 <i class="bx bx-menu bx-md"></i>
@@ -55,8 +55,8 @@
                     <img src="images/profile.jpg">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Sana Ullah and I'm <span class="typing-2"></span></div>
-                    <p>As a developer i did alot of projects in html,css and JavaScript
+                    <div class="text">I'm Sana Ullah,<span class="typing-2"></span></div>
+                    <p>As a developer I did a lot of projects in html,css and JavaScript
                         .Now i am looking for job so that i relate my self with my field and to show some contribution in website development. 
 
                     </p>
@@ -75,7 +75,7 @@
                         </tr>
                         <tr>
                             <td>From</td>
-                            <td>peshawar,KPK Pakistan</td>
+                            <td>Peshawar,KPK Pakistan</td>
                         </tr>
                         <tr>
                             <td>Language</td>
@@ -86,7 +86,7 @@
                             <td>Available</td>
                         </tr>
                     </table>
-                    <a href="#" class="btn-md">Download CV</a>
+                    <a href="#" class="btn-md">CV will available on demand</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                         <i class="bx bxl-html5 bx-lg"></i>
                        </div>
                           <h4>Web Design</h4>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi veniam consequatur veritatis dicta, iste aut voluptatibus odio hic suscipit fugit!</p>
+                          <p>see <a href="https://github.com/SanaUllah1696/goat-house">here</a> My website. I have design this website in css, bootstrap and html</p>
                     </div>
                  <div class="shadowone"></div>
                  <div class="shadowtwo"></div>        
@@ -117,7 +117,7 @@
                         <i class="bx bxl-apple bx-lg"></i>
                        </div>
                           <h4>Wordpress Developer</h4>
-                          <p>i can do any thing in Wordpress like ecommmerce website,blog, and portfolio website</p>
+                          <p>Can do any thing in Wordpress like ecommmerce website,blog, and portfolio website</p>
                     </div>
                  <div class="shadowone"></div>
                  <div class="shadowtwo"></div>        
@@ -129,7 +129,7 @@
                         <i class="bx bxs-video-recording bx-lg"></i>
                        </div>
                           <h4>API Maker</h4>
-                          <p> </p>
+                          <p>Can develop API in express and PHP but initially my focus is on frontend </p>
                     </div>
                  <div class="shadowone"></div>
                  <div class="shadowtwo"></div>        
@@ -150,53 +150,60 @@
                     <div class="text">
                         Skills & Experiences
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptatibus eos beatae deserunt velit debitis dolorem dolores omnis. Pariatur sed deserunt eaque, atque placeat cupiditate veritatis nihil accusantium alias suscipit. Voluptatem, iure placeat! Cupiditate doloremque accusantium quidem dicta quibusdam alias deserunt nulla obcaecati facilis recusandae. Dolor, tenetur aspernatur, expedita maiores libero non, distinctio iure accusamus eos quod voluptas error mollitia.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quam repellat quos laudantium assumenda odit aperiam, illum, dicta unde totam mollitia asperiores voluptatibus iste quas fugit, perferendis atque inventore quae?</p>
+                    <p>I did about twenty project in JavaScript,html,css,Node/Express.JS</p>
+                    <p> <a href="https://github.com/SanaUllah1696?tab=repositories">Click</a></p>
                     <a href="#" class="btn-md">Read More</a>
                 </div>
                 <div class="column right">
                    <div class="bars">
                        <div class="info">
-                           <span>PhotoShop</span>
-                           <span>65%</span>
+                           <span>HTML</span>
+                           <span>90%</span>
                        </div>
                        <div class="line ps"></div>
                    </div>
                    <div class="bars">
                        <div class="info">
-                           <span>Motion Graphics</span>
+                           <span>CSS</span>
                            <span>80%</span>
                        </div>
                        <div class="line mg"></div>
                    </div>
                    <div class="bars">
                        <div class="info">
-                           <span>AdobeXD</span>
-                           <span>50%</span>
+                           <span>JavaScript</span>
+                           <span>55%</span>
                        </div>
                        <div class="line axd"></div>
                    </div>
                    <div class="bars">
                        <div class="info">
-                           <span>UX Design</span>
+                           <span></span>
                            <span>90%</span>
                        </div>
                        <div class="line uxd"></div>
                    </div>
                    <div class="bars">
                        <div class="info">
-                           <span>HTML</span>
+                           <span>Wordpress</span>
                            <span>99%</span>
                        </div>
                        <div class="line html"></div>
                    </div>
                    <div class="bars">
                        <div class="info">
-                           <span>Digital Marketing</span>
-                           <span>56%</span>
+                           <span>NodeJS</span>
+                           <span>51%</span>
                        </div>
                        <div class="line dm"></div>
                    </div>
+                   <div class="bars">
+                    <div class="info">
+                        <span>Express JS</span>
+                        <span>51%</span>
+                    </div>
+                    <div class="line dm"></div>
+                </div>
                 </div>
             </div>
         </div>
@@ -226,12 +233,12 @@
                         <div class="form-group">
                             <textarea name="message" id="message" placeholder="Your Message"></textarea>
                         </div>
-                        <button type="submit" class="btn-md">Send Message</button>
+                        <button type="submit" class="btn-md">Send Mail</button>
                     </form>
                 </div>
                 <div class="column right">
                    <h2>Contact Info</h2>
-                   <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, voluptatum! Ullam ab neque aut nostrum. Cumque officia cupiditate deleniti quam!</p>
+                   <p class="lead">Dera Ismail Khan,KPK, Pakistan</p>
                    <div class="items">
                        <div class="item">
                             <i class="bx bxs-envelope bx-xs"></i>
@@ -260,12 +267,12 @@
                         </div>
                        </div>
                        <div>
-                            <p>Visit my social profile and get connected</p>
+                            <p>Visit my social profile and Get Connected</p>
                             <ul class="links">
-                                <li><a href="#"><i class="bx bxl-dribbble bx-md"></i></a></li>
-                                <li><a href="#"><i class="bx bxl-instagram-alt bx-md"></i></a></li>
-                                <li><a href="#"><i class="bx bxl-twitter bx-md"></i></a></li>
-                                <li><a href="#"><i class="bx bxl-youtube bx-md"></i></a></li>
+                                <li><a href="#"><i class="bx bxl-dribbble bx-md">NA</i></a></li>
+                                <li><a href="#"><i class="bx bxl-instagram-alt bx-md">NA</i></a></li>
+                                <li><a href="#"><i class="bx bxl-twitter bx-md"></i>NA</a></li>
+                                <li><a href="#"><i class="bx bxl-youtube bx-md"></i>NA</a></li>
                             </ul>
                      </div>
                        </div>
